@@ -1,31 +1,44 @@
 package ua.com.fielden.platform.eql.dbschema;
 
 import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.Streams;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.hibernate.dialect.Dialect;
+import ua.com.fielden.platform.audit.AbstractAuditEntity;
 import ua.com.fielden.platform.entity.AbstractEntity;
+import ua.com.fielden.platform.entity.AbstractPersistentEntity;
+import ua.com.fielden.platform.entity.AbstractUnionEntity;
 import ua.com.fielden.platform.entity.annotation.*;
-import ua.com.fielden.platform.entity.query.DbVersion;
+import ua.com.fielden.platform.entity.exceptions.EntityDefinitionException;
 import ua.com.fielden.platform.eql.dbschema.exceptions.DbSchemaException;
 import ua.com.fielden.platform.persistence.HibernateHelpers;
 import ua.com.fielden.platform.reflection.PropertyTypeDeterminator;
+import ua.com.fielden.platform.types.RichText;
 
 import java.lang.reflect.Field;
 import java.util.*;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static java.util.Comparator.comparing;
+import static java.util.Comparator.comparingInt;
+import static java.util.stream.Collectors.joining;
 import static java.util.stream.Collectors.toList;
 import static org.apache.commons.lang3.StringUtils.isEmpty;
+import static ua.com.fielden.platform.audit.AuditUtils.isAuditEntityType;
 import static ua.com.fielden.platform.entity.AbstractEntity.*;
+import static ua.com.fielden.platform.entity.AbstractUnionEntity.unionProperties;
 import static ua.com.fielden.platform.entity.exceptions.NoSuchPropertyException.noSuchPropertyException;
 import static ua.com.fielden.platform.entity.query.DbVersion.MSSQL;
 import static ua.com.fielden.platform.entity.query.DbVersion.POSTGRESQL;
-import static ua.com.fielden.platform.reflection.AnnotationReflector.getKeyType;
-import static ua.com.fielden.platform.reflection.AnnotationReflector.getPropertyAnnotation;
+import static ua.com.fielden.platform.eql.dbschema.ColumnDefinitionExtractor.ERR_MISSING_MAP_TO_IN_UNION_ENTITY;
+import static ua.com.fielden.platform.eql.dbschema.ColumnDefinitionExtractor.nameClause;
+import static ua.com.fielden.platform.eql.dbschema.Index.Order.ASC;
+import static ua.com.fielden.platform.eql.dbschema.Index.Order.DESC;
+import static ua.com.fielden.platform.reflection.AnnotationReflector.*;
 import static ua.com.fielden.platform.reflection.Finder.findRealProperties;
+import static ua.com.fielden.platform.utils.CollectionUtil.concatList;
 import static ua.com.fielden.platform.utils.EntityUtils.*;
 
 /// Generates DDL to create a table, primary key, indices (including unique) and foreign key constraints for the specified persistent type.
@@ -69,17 +82,21 @@ public class TableDdl {
     private static final String ID_OVERRIDE_MAP_TO_RULE = " When [id] overrides, only @MapTo(\"_ID\") is permitted (matching the default ID column).";
     private static final String
             ERR_ID_OVERRIDE_NON_DEFAULT_MAP_TO_COLUMN_NAME = "Property [id] in entity type [%s] is annotated with @MapTo(\"%s\")." + ID_OVERRIDE_MAP_TO_RULE,
-            ERR_ID_OVERRIDE_MAP_TO_EMPTY_COLUMN_NAME = "Property [id] in entity type [%s] is annotated with @MapTo without a value (would default to \"ID_\")." + ID_OVERRIDE_MAP_TO_RULE;
+            ERR_ID_OVERRIDE_MAP_TO_EMPTY_COLUMN_NAME = "Property [id] in entity type [%s] is annotated with @MapTo without a value (would default to \"ID_\")." + ID_OVERRIDE_MAP_TO_RULE,
+            ERR_UNION_ENTITY_HAS_NO_UNION_MEMBERS = "Union entity type [%s] has no union members.",
+            WARN_INDEX_NOT_SUPPORTED = "Index for column type [%s] is not supported by [%s]. Skipping index creation for column [%s] in [%s].";
 
     public final Class<? extends AbstractEntity<?>> entityType;
     /// Maps a property path to its column definition.
     private final Map<String, ColumnDefinition> columns;
+    private final List<Index> indexes;
     private final String tableName;
 
     public TableDdl(final ColumnDefinitionExtractor columnDefinitionExtractor, final Class<? extends AbstractEntity<?>> entityType) {
         this.entityType = entityType;
-        this.columns = populateColumns(columnDefinitionExtractor, entityType);
         this.tableName = tableName(entityType);
+        this.columns = populateColumns(columnDefinitionExtractor, entityType);
+        this.indexes = populateIndexes(entityType, columnDefinitionExtractor.dialect());
     }
 
     private static Map<String, ColumnDefinition> populateColumns(final ColumnDefinitionExtractor columnDefinitionExtractor, final Class<? extends AbstractEntity<?>> entityType) {
@@ -159,7 +176,7 @@ public class TableDdl {
     public String createTableSchema(final Dialect dialect) {
         final var sb = new StringBuilder();
         sb.append("CREATE TABLE %s ( ".formatted(this.tableName));
-        sb.append(columnDefinitions().stream().map(col -> col.schemaString(dialect)).collect(Collectors.joining(", ")));
+        sb.append(columnDefinitions().stream().map(col -> col.schemaString(dialect)).collect(joining(", ")));
         sb.append(" );");
         return sb.toString();
     }
@@ -169,8 +186,10 @@ public class TableDdl {
     /// * It is considered an error if the `property` is not contained within this table.
     /// * If the `property` is **component-typed**, the path must be a full path to the component.
     ///   For example, `note.coreText` for the property `note: RichText`.
-    /// * If the `property` is **union-typed**, the path must be a full path to a union member.
-    ///   For example, `location.workshop` for the union-typed property `location: Location`, where union members are `workshop` and `station`.
+    /// * If the `property` is **union-typed**, the path must represent either the union-typed property itself or one of the union members.
+    ///   For example, `location`, or `location.workshop`, or `location.station` for the union-typed property `location: Location`, where union members are `workshop` and `station`.
+    ///   Only on SQL Server the name of the union-typed property itself resolves, representing a computed column.
+    ///   PostgreSQL has no such column, as it indexes the expression directly, so there bare `location` does not resolve.
     /// * Otherwise, the path must be a simple property name.
     ///
     /// @param property the property path
@@ -190,23 +209,52 @@ public class TableDdl {
         return Optional.ofNullable(columns.get(property));
     }
 
-    /// Generates DDL statements for all unique and non-unique indices, including those representing a business key.
+    /// Generates DDL statements for all unique and non-unique indices.
     ///
-    /// For composite-key entities a unique index over all `@CompositeKeyMember` columns is emitted, but only when
-    /// at least one such column is present in this table. This guard matters when the only declared composite key
-    /// member is the overridden `id` property: its `@CompositeKeyMember` is dismissed (see the class javadoc),
-    /// so emitting the index would produce an empty column list — invalid SQL. The PK on `_ID` already enforces
-    /// uniqueness in that scenario, so skipping the redundant composite index is safe.
+    /// For a composite key, a unique index over all key member columns is created.
+    /// Importantly, when the only declared composite key member is the overridden `id`: its `@CompositeKeyMember` is dismissed (see the class javadoc),
+    /// so creating the index would produce an empty column list — invalid SQL.
+    /// The PK on `_ID` already enforces uniqueness in that scenario, so skipping the redundant composite index is safe.
     ///
     public List<String> createIndicesSchema(final Dialect dialect) {
-        final Map<Boolean, List<ColumnDefinition>> uniqueAndNot = columnDefinitions().stream().collect(Collectors.partitioningBy(col -> col.unique));
-        final List<String> result = new LinkedList<>();
-        if (isCompositeEntity(entityType) && hasCompositeKeyMembers()) {
-            result.add(createUniqueCompositeIndicesSchema(columnDefinitions().stream(), dialect));
-        }
-        result.addAll(createUniqueIndicesSchema(uniqueAndNot.get(true).stream(), dialect));
-        result.addAll(createNonUniqueIndicesSchema(uniqueAndNot.get(false).stream(), dialect));
-        return result;
+        return concatList(mkCompositeKeyIndex(columnDefinitions()).map(List::of).orElseGet(Collections::emptyList),
+                          mkUniqueIndexes(columnDefinitions(), dialect),
+                          indexes.stream().map(this::indexToSql).toList());
+    }
+
+    /// Generates DDL statements for all indexes defined on the specified column.
+    ///
+    /// Unique indexes are not included — they are generated as part of [#createIndicesSchema(Dialect)],
+    /// which produces the complete set of indexes for this table.
+    ///
+    /// It is **not** an error for the specified column to be absent from this table — an empty list is returned.
+    ///
+    public List<String> createIndicesSchema(final ColumnDefinition column) {
+        return indexes.stream()
+                .filter(index -> index instanceof Index.Column it && it.column().equals(column.name))
+                .map(this::indexToSql)
+                .collect(toList());
+    }
+
+    private String indexToSql(final Index index) {
+        return switch (index) {
+            case Index.Column it -> "CREATE INDEX %s ON %s(%s %s);".formatted(
+                    it.name(),
+                    this.tableName,
+                    it.column(),
+                    switch (it.order()) {
+                        case ASC -> "ASC";
+                        case DESC -> "DESC";
+                    });
+            case Index.Expression it -> "CREATE INDEX %s ON %s((%s) %s);".formatted(
+                    it.name(),
+                    this.tableName,
+                    it.expression(),
+                    switch (it.order()) {
+                        case ASC -> "ASC";
+                        case DESC -> "DESC";
+                    });
+        };
     }
 
     /// Returns `true` if any column in this table carries a `@CompositeKeyMember` ordering — that is,
@@ -216,25 +264,29 @@ public class TableDdl {
         return columnDefinitions().stream().anyMatch(col -> col.compositeKeyMemberOrder.isPresent());
     }
 
-    private String createUniqueCompositeIndicesSchema(final Stream<ColumnDefinition> cols, final Dialect dialect) {
-        final String tableName = tableName(entityType);
-        final String keyMembersStr = cols
-                .filter(col -> col.compositeKeyMemberOrder.isPresent())
-                .sorted(Comparator.comparingInt(col -> col.compositeKeyMemberOrder.get()))
-                .map(col -> col.name)
-                .collect(Collectors.joining(", "));
-        return "CREATE UNIQUE INDEX KUI_%1$s ON %1$s(%2$s);".formatted(this.tableName, keyMembersStr);
+    private Optional<String> mkCompositeKeyIndex(final Iterable<ColumnDefinition> cols) {
+        if (isCompositeEntity(entityType) && hasCompositeKeyMembers()) {
+            final var keyMembersStr = Streams.stream(cols)
+                    .filter(col -> col.compositeKeyMemberOrder.isPresent())
+                    .sorted(comparingInt(col -> col.compositeKeyMemberOrder.get()))
+                    .map(col -> col.name)
+                    .collect(joining(", "));
+            return Optional.of("CREATE UNIQUE INDEX KUI_%1$s ON %1$s(%2$s);".formatted(this.tableName, keyMembersStr));
+        }
+        else {
+            return Optional.empty();
+        }
     }
 
-    private List<String> createUniqueIndicesSchema(final Stream<ColumnDefinition> cols, final Dialect dialect) {
-        final DbVersion dbVersion = HibernateHelpers.getDbVersion(dialect);
-        return cols
+    private List<String> mkUniqueIndexes(final Iterable<ColumnDefinition> cols, final Dialect dialect) {
+        final var dbVersion = HibernateHelpers.getDbVersion(dialect);
+        return Streams.stream(cols)
+                .filter(col -> col.unique)
                 // We know how to create unique indexes for nullable columns in case of SQL Server and PostgreSQL.
-                .filter(col -> col.nullable ? MSSQL == dbVersion || POSTGRESQL == dbVersion : true)
+                .filter(col -> !col.nullable || MSSQL == dbVersion || POSTGRESQL == dbVersion)
                 .filter(col -> {
                     if (!col.indexApplicable) {
-                        LOGGER.warn(() -> "Index for column type [%s] is not supported by [%s]. Skipping index creation for column [%s] in [%s]."
-                                          .formatted(col.sqlTypeName, dbVersion, col.name, entityType.getSimpleName()));
+                        LOGGER.warn(() -> WARN_INDEX_NOT_SUPPORTED.formatted(col.sqlTypeName, dbVersion, col.name, entityType.getSimpleName()));
                         return false;
                     } else {
                         return true;
@@ -256,31 +308,7 @@ public class TableDdl {
                     sb.append(";");
                     return sb.toString();
                 })
-                .collect(toList());
-    }
-
-    public List<String> createNonUniqueIndicesSchema(final Stream<ColumnDefinition> cols, final Dialect dialect) {
-        final DbVersion dbVersion = HibernateHelpers.getDbVersion(dialect);
-        return cols
-                .map(col -> col.maybeIndex.map(index -> {
-                    if (!col.indexApplicable) {
-                        LOGGER.warn(() -> "Index for column type [%s] is not supported by [%s]. Skipping index creation for column [%s] in [%s]."
-                                          .formatted(col.sqlTypeName, dbVersion, col.name, entityType.getSimpleName()));
-                        return "";
-                    }
-                    else {
-                        return "CREATE INDEX %s ON %s(%s %s)".formatted(
-                                indexName(this.tableName, col.name),
-                                this.tableName,
-                                col.name,
-                                switch (index.order()) {
-                                    case ASC -> "ASC";
-                                    case DESC -> "DESC";
-                                });
-                    }
-                }).orElse(""))
-                .filter(s -> !s.isEmpty())
-                .collect(toList());
+                .toList();
     }
 
     /// Returns the name of an index for the specified column.
@@ -292,13 +320,7 @@ public class TableDdl {
     }
 
     /// Returns the name of an index for the specified `property`.
-    ///
-    /// * It is considered an error if the `property` is not contained within this table.
-    /// * If the `property` is **component-typed**, the path must be a full path to the component.
-    ///   For example, `note.coreText` for the property `note: RichText`.
-    /// * If the `property` is **union-typed**, the path must be a full path to a union member.
-    ///   For example, `location.workshop` for the union-typed property `location: Location`, where union members are `workshop` and `station`.
-    /// * Otherwise, the path must be a simple property name.
+    /// The `property` is resolved to a column as described by [#getColumnDefinition(String)].
     ///
     /// @param property  a property path.
     ///
@@ -306,7 +328,7 @@ public class TableDdl {
         return getIndexName(getColumnDefinition(property.toString()));
     }
 
-    private static String indexName(final CharSequence tableName, final CharSequence columnName) {
+    public static String indexName(final CharSequence tableName, final CharSequence columnName) {
         return "I_%s_%s".formatted(tableName, columnName);
     }
 
@@ -352,6 +374,118 @@ public class TableDdl {
         } else {
             return mapEntityTo.value();
         }
+    }
+
+    /// Collects definitions of all non-unique indexes for this table.
+    ///
+    /// An index is derived from the property that a column originates from:
+    ///
+    /// - A property of a persistent entity type is indexed in ascending order.
+    ///   Properties [AbstractPersistentEntity#createdBy] and [AbstractPersistentEntity#lastUpdatedBy] are excluded, as their low selectivity makes an index counterproductive.
+    ///   This rule also covers union-typed properties, where each union member has a column of its own.
+    /// - Property [AbstractAuditEntity#auditDate] is indexed in descending order, reflecting the order in which audit records are usually retrieved.
+    /// - Component [RichText#searchText] of a [RichText]-typed property is indexed in ascending order to support searching.
+    ///
+    /// Columns that are unique are skipped — a unique index is generated for them by [#mkUniqueIndexes(Stream, Dialect)].
+    /// Columns whose SQL type does not support indexing in the target RDBMS are skipped with a warning.
+    ///
+    private List<Index> populateIndexes(final Class<? extends AbstractEntity<?>> entityType, final Dialect dialect) {
+        final var dbVersion = HibernateHelpers.getDbVersion(dialect);
+        final var columnIndexes = columns.entrySet().stream()
+                .map(entry -> {
+                    final var property = entry.getKey();
+                    final var col = entry.getValue();
+                    if (!col.unique) {
+                        return indexOrder(entityType, property, col)
+                                .map(order -> {
+                                    if (col.indexApplicable) {
+                                        return Index.Column(indexName(this.tableName, col.name), order, col.name);
+                                    }
+                                    else {
+                                        LOGGER.warn(() -> WARN_INDEX_NOT_SUPPORTED.formatted(col.sqlTypeName, dbVersion, col.name, entityType.getSimpleName()));
+                                        return null;
+                                    }
+                                })
+                                .orElse(null);
+                    }
+                    else {
+                        return null;
+                    }
+                })
+                .filter(Objects::nonNull)
+                .toList();
+        final var unionExprIndexes = populateUnionIndexes(entityType, this.tableName, dialect);
+        return concatList(columnIndexes, unionExprIndexes);
+    }
+
+    private static List<Index> populateUnionIndexes(final Class<? extends AbstractEntity<?>> entityType, final String tableName, final Dialect dialect) {
+        return switch (HibernateHelpers.getDbVersion(dialect)) {
+            case POSTGRESQL -> findRealProperties(entityType, MapTo.class)
+                    .stream()
+                    .filter(prop -> isUnionEntityType(prop.getType()))
+                    .map(prop -> {
+                        final var mapTo = getPropertyAnnotation(MapTo.class, entityType, prop.getName());
+                        final var colName = nameClause(prop.getName(), mapTo.value());
+                        final var expr = mkUnionExprSql((Class<? extends AbstractUnionEntity>) prop.getType(), colName);
+                        return Index.Expression(indexName(tableName, colName), Index.Order.ASC, expr);
+                    })
+                    .toList();
+            default -> List.of();
+        };
+    }
+
+    public static String mkUnionExprSql(final Class<? extends AbstractUnionEntity> unionType, final String columnName) {
+        final var unionProps = unionProperties(unionType).stream().sorted(comparing(Field::getName)).toList();
+        if (unionProps.isEmpty()) {
+            throw new EntityDefinitionException(ERR_UNION_ENTITY_HAS_NO_UNION_MEMBERS.formatted(unionType.getTypeName()));
+        }
+        return unionProps.stream()
+                .map(member -> {
+                    final var sMapTo = getAnnotation(member, MapTo.class);
+                    if (sMapTo == null) {
+                        throw new DbSchemaException(ERR_MISSING_MAP_TO_IN_UNION_ENTITY.formatted(member.getName(), unionType));
+                    }
+                    final var memberCol = columnName + "_" + (isEmpty(sMapTo.value()) ? member.getName().toUpperCase() : sMapTo.value());
+                    return "WHEN %s IS NOT NULL THEN %s".formatted(memberCol, memberCol);
+                })
+                .collect(joining(" ", "CASE ", " END"));
+    }
+
+    /// Determines whether a column, originating from the specified property path, should be indexed, and in what order.
+    /// Refer to [#populateIndexes(Class, Dialect)] for a description of the rules that govern this decision.
+    ///
+    private static Optional<Index.Order> indexOrder(
+            final Class<? extends AbstractEntity<?>> entityType,
+            final String property,
+            final ColumnDefinition column)
+    {
+        if (isAuditEntityType(entityType) && AbstractAuditEntity.AUDIT_DATE.equals(property) && column.javaType == Date.class) {
+            return Optional.of(DESC);
+        }
+        else if (isRichTextSearchText(entityType, property)) {
+            return Optional.of(ASC);
+        }
+        else if ((isPersistentEntityType(column.javaType)
+                  && !AbstractPersistentEntity.CREATED_BY.equals(property)
+                  && !AbstractPersistentEntity.LAST_UPDATED_BY.equals(property))
+                 || isUnionEntityType(column.javaType))
+        {
+            return Optional.of(ASC);
+        }
+        else {
+            return Optional.empty();
+        }
+    }
+
+    /// Returns `true` if the specified property path identifies the `searchText` component of a `RichText`-typed property.
+    ///
+    private static boolean isRichTextSearchText(final Class<? extends AbstractEntity<?>> entityType, final String property) {
+        final int idx = property.lastIndexOf('.');
+        if (idx <= 0 || !RichText.SEARCH_TEXT.equals(property.substring(idx + 1))) {
+            return false;
+        }
+        final Class<?> enclosingPropType = PropertyTypeDeterminator.determinePropertyType(entityType, property.substring(0, idx));
+        return enclosingPropType != null && RichText.class.isAssignableFrom(enclosingPropType);
     }
 
 }
